--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.h5 filter=lfs diff=lfs merge=lfs -text
-*.tf filter=lfs diff=lfs merge=lfs -text
+model.tf/variables/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+ML_Models/MultiLabelModel.h5 filter=lfs diff=lfs merge=lfs -text
